--- a/CSS/global.css
+++ b/CSS/global.css
@@ -25,8 +25,10 @@ a:hover{
 
 /*Header*/
 header{
-    position: relative;
-    padding: 0 2rem;
+    padding: 2vh 2rem;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
 }
 
 .navbar{
@@ -58,7 +60,7 @@ header{
 .action_btn{
     background-color: rgb(34, 3, 3);
     color: white;
-    padding: 0.5rem 1rem;
+    padding: 0.7rem 1rem;
     border: none;
     outline: none;
     border-radius: 10px;
