--- a/CSS/index.css
+++ b/CSS/index.css
@@ -202,7 +202,7 @@ section.nabidka{
 
 .answer{
     max-height: 0;
-    overflow: hidden;
+    overflow: scroll;
     transition: max-height 1.4s ease;
 }
 
