--- a/CSS/index.css
+++ b/CSS/index.css
@@ -201,8 +201,8 @@ section.nabidka{
 }
 
 .answer{
-    max-height: 0;
-    overflow: scroll;
+    max-height: fit-content;
+    overflow: hidden;
     transition: max-height 1.4s ease;
 }
 
