--- a/CSS/global.css
+++ b/CSS/global.css
@@ -39,6 +39,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 100;
 }
 
 .navbar .logo a{
