--- a/CSS/global.css
+++ b/CSS/global.css
@@ -26,7 +26,7 @@ a:hover{
 /*Header*/
 header{
     padding: 2vh 2rem;
-    position: absolute;
+    position: sticky;
     top: 0;
     z-index: 9999;
 }
