--- a/CSS/global.css
+++ b/CSS/global.css
@@ -45,7 +45,8 @@ header{
 .navbar .logo a{
     font-size: 1.5rem;
     font-weight: bold;
-    width: 70px;
+    height: 50px;
+    width: auto;
     margin: 3px;
 }
 
