--- a/CSS/global.css
+++ b/CSS/global.css
@@ -42,12 +42,11 @@ header{
     z-index: 100;
 }
 
-.navbar .logo a{
+.navbar .logo{
     font-size: 1.5rem;
     font-weight: bold;
-    height: 50px;
+    height: 20px;
     width: auto;
-    margin: 3px;
 }
 
 .navbar .links{
