--- a/CSS/obedovanabidka.css
+++ b/CSS/obedovanabidka.css
@@ -6,9 +6,12 @@
     background-color: rgb(61, 36, 3);
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 10px 10px 10px 1px rgba(61, 36, 3,0.39);
+    -moz-box-shadow: 10px 10px 10px 1px rgba(61, 36, 3,0.39);
+    box-shadow: 10px 10px 10px 1px rgba(61, 36, 3,0.39);
     margin-bottom: 20px;
     text-align: center;
+    width: 80vw;
 }
 
 .special-offer h2 {
@@ -19,6 +22,11 @@
 .special-offer p {
     margin: 0;
     color: white;
+}
+
+#typjidla{
+    font-weight: normal;
+    color: wheat;
 }
 
 #specialItem {
