--- a/CSS/obedovanabidka.css
+++ b/CSS/obedovanabidka.css
@@ -10,10 +10,9 @@
     -moz-box-shadow: 10px 10px 10px 1px rgba(61, 36, 3,0.39);
     box-shadow: 10px 10px 10px 1px rgba(61, 36, 3,0.39);
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
-    width: 80vw;
-    align-items: center;
-    justify-content: center;
 }
 
 .special-offer h2 {
