--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -75,7 +75,9 @@ div.vyber button {
 /* Menu section styles */
 #menu {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: 3rem;
 }
 
 .category {
