--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -1,31 +1,4 @@
-.menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
 
-.menu div {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin: 5px;
-    text-align: center;
-}
-
-
-
-/* Menu section styles */
-#menu {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 2rem;
-}
-
-.vyber {
-    text-align: center;
-    margin: 20px 0;
-}
-
-/* menu.css */
 .menu-jidlo {
     padding: 20px;
     margin: 10px;
@@ -36,6 +9,7 @@
     justify-content: space-around;
     margin-bottom: 20px;
     text-align: center;
+    width: fit-content;
 }
 
 .vyber button {
@@ -46,6 +20,8 @@
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s ease;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .vyber button:hover {
@@ -76,8 +52,8 @@ div.vyber button {
 #menu {
     text-align: center;
     margin-top: 30px;
-    margin-bottom: 10px;
-    font-size: 3rem;
+    margin-bottom: 30px;
+    font-size: 2.5rem;
 }
 
 .category {
@@ -125,7 +101,7 @@ div.vyber button {
         flex: 0 0 100%;
         box-sizing: border-box;
         margin-bottom: 20px;
-        background-color: #e5914C;
+        background-color: white;
         border-radius: 8px;
         display: flex;
         flex-direction: row;
