--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -10,6 +10,8 @@
     margin-bottom: 20px;
     text-align: center;
     width: fit-content;
+    align-items: center;
+    justify-content: center;
 }
 
 .vyber button {
