--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -6,12 +6,11 @@
 
 .vyber {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: 20px;
     text-align: center;
-    width: fit-content;
+    gap: 20px;
     align-items: center;
-    justify-content: center;
 }
 
 .vyber button {
@@ -22,8 +21,6 @@
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s ease;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .vyber button:hover {
