--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -100,7 +100,7 @@ div.vyber button {
         flex: 0 0 100%;
         box-sizing: border-box;
         margin-bottom: 20px;
-        background-color: white;
+        background-color: wheat;
         border-radius: 8px;
         display: flex;
         flex-direction: row;
