--- a/CSS/global.css
+++ b/CSS/global.css
@@ -2,6 +2,7 @@ body{
     height: 100vh;
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 
 li{
