--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,8 +1,11 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     height: 100vh;
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
 }
 
 li{
@@ -22,6 +25,10 @@ a{
 a:hover{
     background-color: bisque;
     transition-duration: 0.5s;
+}
+
+section {
+    margin-top: 50px;
 }
 
 /*Header*/
