--- a/CSS/index.css
+++ b/CSS/index.css
@@ -202,7 +202,7 @@ section.nabidka{
 
 .answer{
     max-height: 0;
-    
+    overflow: hidden;
     transition: max-height 1.4s ease;
 }
 
@@ -546,7 +546,7 @@ section.faq{
 
 .odpoved{
     max-height: 0;
-    
+    overflow: hidden;
     transition: max-height 1.4s ease;
 }
 
