--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@
     
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; margin: 5vw;}
-    .div3 { grid-area: 2 / 2 / 3 / 3; margin-top: -11vw; height: fit-content;}
+    .div3 { grid-area: 2 / 2 / 3 / 3; margin-top: -11vw; height: fit-content; z-index: 1;}
     .div4 { grid-area: 2 / 1 / 3 / 2; margin: 5vw; margin-top: -3vw; height: fit-content;}
 
 
@@ -25,6 +25,7 @@
     }
 
     .veganplate{
+        z-index: 1;
         width: 40vw;
         float: right;
         margin-right: 10%;
