--- a/CSS/global.css
+++ b/CSS/global.css
@@ -37,7 +37,7 @@ header{
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: white;
+    background-color: transparent;
 }
 
 .navbar{
