--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -88,6 +88,16 @@ div.vyber button {
 }
 
 @media only screen and (max-width: 768px) {
+    .vyber {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+        text-align: center;
+        gap: 20px;
+        align-items: center;
+        max-width: 700px;
+    }
+
     .category {
         display: flex;
         flex-wrap: wrap;
