--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -121,6 +121,7 @@ div.vyber button {
         flex-direction: row;
         align-items: center;
         max-height: 200px;
+        justify-content: center;
     }
 
     .category div img {
