--- a/CSS/index.css
+++ b/CSS/index.css
@@ -463,6 +463,9 @@ body{
 
 
 @media (max-width: 1024px){
+    .div4-review{
+        margin-bottom: -20vh;
+    }
     .div2-review
     {
         margin-left: 5vh;
@@ -471,10 +474,12 @@ body{
     {
         margin-top: -38vh; 
         margin-left: 5vh;
+        margin-bottom: -20vh;
     }
     .div6-review
     {
         margin-top: -23vh;
+        margin-bottom: -20vh;
     }
 }
 
@@ -483,14 +488,19 @@ body{
     {
         width: 33%;
     }
+    .div4-review{
+        margin-bottom: -40vh;
+    }
     .div5-review
     {
         width: 33%;
         margin-top: -70vh; 
+        margin-bottom: -40vh;
     }
     .div6-review
     {
         margin-top: -43vh;
+        margin-bottom: -40vh;
     }
 }
 
