--- a/CSS/index.css
+++ b/CSS/index.css
@@ -500,16 +500,18 @@ body{
         width: auto;
     }
     .div2-review{
-        width: auto;
+        width: 100%;
     }
     .div4-review{
         width: auto;
     }
     .div5-review{
         margin-top: 0px;
+        width: 100%;
     }
     .div6-review{
         margin-top: 0px;
+        margin-bottom: 10%;
     }
     .review h4{
         font-size: 1.2rem;
