--- a/CSS/global.css
+++ b/CSS/global.css
@@ -32,7 +32,7 @@ header{
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: transparent;
+    background-color: antiquewhite;
 }
 
 .navbar{
