--- a/CSS/global.css
+++ b/CSS/global.css
@@ -83,11 +83,11 @@ header{
 /* dropdown menu */
 .dropdown_menu{
     display: none;
-    position: absolute;
+    position: sticky;
     right: 2rem;
     top: 60px;
     width: 300px;
-    height: 0;
+    
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(15px);
     border-radius: 10px;
@@ -96,8 +96,10 @@ header{
 }
 
 .dropdown_menu.open{
-    height: 290px;
-
+    height: 320px;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
 .dropdown_menu li{
