--- a/CSS/global.css
+++ b/CSS/global.css
@@ -87,7 +87,7 @@ header{
     right: 2rem;
     top: 60px;
     width: 300px;
-    
+    height: 0;
     background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(15px);
     border-radius: 10px;
@@ -99,7 +99,6 @@ header{
     height: 320px;
     align-items: center;
     justify-content: center;
-    align-content: center;
 }
 
 .dropdown_menu li{
