--- a/CSS/global.css
+++ b/CSS/global.css
@@ -93,12 +93,11 @@ header{
     border-radius: 10px;
     overflow: hidden;
     transition: height .7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    margin-top: 30px;
 }
 
 .dropdown_menu.open{
-    height: 320px;
-    align-items: center;
-    justify-content: center;
+    height: 305px;
 }
 
 .dropdown_menu li{
