--- a/CSS/global.css
+++ b/CSS/global.css
@@ -83,9 +83,7 @@ header{
 /* dropdown menu */
 .dropdown_menu{
     display: none;
-    position: sticky;
-    align-items: right;
-    justify-content: right;
+    position: absolute;
     right: 2rem;
     top: 60px;
     width: 300px;
